@@ -1,3 +1,8 @@
+Sun Sep 26 22:23:26 BST 2010  Colin Watson  <cjwatson@debian.org>
+
+	* lib/Makefile.am (libman_la_LIBADD): Use $(LTLIBOBJS) rather than
+	  $(LIBOBJS).
+
 Sun Sep 26 22:08:39 BST 2010  Colin Watson  <cjwatson@debian.org>
 
 	Build libman and libmandb as shared libraries, reducing our
